# chat-cli

./: README.md  build.sh  cleanup_shiv.py  pyproject.toml  pyrightconfig.json  ruff.toml
src/chat_cli/: chat.py  multiline_prompt.py  primers.py
