[project]
name = "chat-cli"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "openai>=1.40.6",
    "ipython>=8.26.0",
    "devtools>=0.12.2",
    "prompt-toolkit>=3.0.47",
    "tiktoken>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "shiv>=1.0.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chat_cli"]

[project.scripts]
main = "chat_cli.chat:main"
mini-chat = "chat_cli.chat:mini_chat"
mini-chat-no = "chat_cli.chat:mini_chat_no"
synonyms = "chat_cli.chat:mini_synonyms"
