[project]
name = "chat-cli"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "openai>=1.40.6",
    "prompt-toolkit>=3.0.47",
    "tiktoken>=0.7.0",
    "pyperclip>=1.9.0",
    "shiv>=1.0.6", # needed to cleanup
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chat_cli"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.26.0",
    "pyright>=1.1.377",
    "ruff>=0.6.1",
]

[project.scripts]
main = "chat_cli.chat:main"
mini-chat = "chat_cli.chat:mini_chat"
synonyms = "chat_cli.chat:mini_synonyms"
